--- a/app/src/main/res/layout/fragment_trip_start.xml
+++ b/app/src/main/res/layout/fragment_trip_start.xml
@@ -4,9 +4,29 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.gipflstuermer.gipfl.TripStartActivity$PlaceholderFragment">
+    tools:context="com.gipflstuermer.gipfl.TripStartActivity$TripStartFragment">
 
-    <TextView android:id="@+id/section_label" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <TextView android:id="@+id/trip_title" android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="32dp"
+        />
+    <TextView android:id="@+id/trip_author" android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/trip_title"
+        android:textSize="16dp"
+        />
+    <TextView android:id="@+id/trip_description" android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/trip_author"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/start_trip_button"
+        android:id="@+id/start_trip_button"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="124dp" />
+
 
 </RelativeLayout>
