--- a/app/src/main/res/menu/menu_trip_list.xml
+++ b/app/src/main/res/menu/menu_trip_list.xml
@@ -5,5 +5,8 @@
         android:orderInCategory="100" app:showAsAction="never" />
     <item android:id="@+id/action_active_trip" android:title="@string/action_active_trip"
         android:orderInCategory="100" app:showAsAction="never" />
+    <item android:id="@+id/action_all_pois" android:title="@string/action_all_pois"
+        android:orderInCategory="100" app:showAsAction="never" />
+
 
 </menu>
