--- a/app/src/main/res/layout/fragment_poi.xml
+++ b/app/src/main/res/layout/fragment_poi.xml
@@ -6,7 +6,9 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.gipflstuermer.gipfl.PoiActivity$PlaceholderFragment">
 
-    <TextView android:id="@+id/trip_title" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <TextView android:id="@+id/poi_name" android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="32dp"
+        />
 
 </RelativeLayout>
