--- a/app/src/main/res/layout/content_trip.xml
+++ b/app/src/main/res/layout/content_trip.xml
@@ -19,14 +19,30 @@
         android:layout_centerHorizontal="true" />
 
     <TextView
-        android:id="@+id/baro_text"
-        android:text="Barometer ausgabe hier"
-        android:layout_centerHorizontal="true"
+        android:id="@+id/curr_alti_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
+
+        android:layout_marginBottom="108dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:id="@+id/curr_longi_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_above="@id/curr_alti_text"
 
         />
+
+    <TextView
+        android:id="@+id/curr_lati_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_above="@id/curr_longi_text"/>
 
 
 
