--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,5 +7,7 @@
         android:orderInCategory="100" app:showAsAction="never" />
     <item android:id="@+id/action_active_trip" android:title="@string/action_active_trip"
         android:orderInCategory="100" app:showAsAction="never" />
+    <item android:id="@+id/action_log_out" android:title="@string/action_log_out"
+        android:orderInCategory="100" app:showAsAction="never" />
 
 </menu>
