--- a/app/src/main/res/layout/row_poi.xml
+++ b/app/src/main/res/layout/row_poi.xml
@@ -2,24 +2,26 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="75dp">
+    android:layout_height="50dp">
 
     <ImageView
         android:id="@+id/img_thumbnail"
-        android:layout_width="50dp"
+        android:layout_width="100dp"
         android:layout_height="50dp"
-        android:layout_marginLeft="25dp"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
-        android:scaleType="centerInside"/>
+        android:scaleType="centerCrop"
+        android:alpha="0.6"
+        />
 
     <TextView
         android:id="@+id/text_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
         android:layout_marginLeft="25dp"
         android:layout_toRightOf="@+id/img_thumbnail"
-        android:layout_alignTop="@+id/img_thumbnail"/>
+        />
 
     <!--<TextView-->
         <!--android:id="@+id/text_author"-->
